[package]
name = "task-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.8"
clap = { version = "3.2", features = ["derive"] }
image = "0.25"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.16", features = ["v4"] }